--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8)
-project( DisplayImage )
+project( SampleProgram )
 find_package( OpenCV REQUIRED )
 add_executable( SampleProgram main.cpp )
 target_link_libraries( SampleProgram ${OpenCV_LIBS} )
